# Kai

./: .gitignore  README.md  kai_v1_design_document.md  package-lock.json  package.json
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/parser/: mod.rs  ollama.rs
apps/desktop/src/app/: App.tsx
apps/desktop/src/components/: GlassPanel.tsx  Sidebar.tsx
apps/desktop/src/data/: mockData.ts
apps/desktop/src/lib/: backend.ts  commandEngine.ts  desktop.ts  persistence.ts  types.ts
apps/desktop/src/styles/: index.css
backend/: package.json
frontend/: .gitignore  package-lock.json  package.json
frontend/electron/: main.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: CalendarSidebar.css  CalendarSidebar.tsx  ChatbotCard.css  ChatbotCard.tsx  DailyBriefCard.css  DailyBriefCard.tsx  EventDetailsModal.css  EventDetailsModal.tsx  ExtendedCalendarView.css  ExtendedCalendarView.tsx  HubView.css  HubView.tsx  MainCalendar.css  MainCalendar.tsx  StickyNotesCard.css  StickyNotesCard.tsx  TabSelector.css  TabSelector.tsx
frontend/src/utils/: calendar.ts
services/backend/: go.mod
services/backend/cmd/api/: main.go
services/backend/internal/config/: config.go
services/backend/internal/handlers/: auth.go  health.go
services/backend/internal/server/: server.go
(+2 files in other folders)
